# BlueScope

./: pyproject.toml
src/monitor_app/: app.py
src/monitor_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/monitor_app/core/: bus.py  scheduler.py
src/monitor_app/domain/: types.py
src/monitor_app/services/: task.py  worker.py
src/monitor_app/services/collectors/: process_collector.py  system_collector.py
src/monitor_app/ui/: main_window.py
src/monitor_app/ui/models/: process_group_model.py  process_model.py
src/monitor_app/ui/tabs/: overview_tab.py  processes_tab.py
src/monitor_app/util/: formatting.py
