[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-app"
version = "0.1.0"
description = "Advanced Task Manager built with PySide6"
requires-python = ">=3.10"

dependencies = [
    "PySide6>=6.6.0",
    "psutil>=5.9.0"
]



[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]